[gd_scene load_steps=7 format=2]

[ext_resource path="res://Prefabs/Utility/Game_camera.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/UI_logic/Splash_screen_logic.gd" type="Script" id=2]
[ext_resource path="res://Sprites/UI/FizzeeSkull_logo.png" type="Texture" id=3]
[ext_resource path="res://Sprites/UI/A_Fizzee_skull_game.png" type="Texture" id=4]
[ext_resource path="res://addons/randomAudioStreamPlayer/random_audio_stream_player.gd" type="Script" id=5]
[ext_resource path="res://Sounds/SFX/Splash_name_sound.wav" type="AudioStream" id=6]

[node name="Splash_screen" type="Node2D"]
script = ExtResource( 2 )

[node name="Back_ground" type="CanvasLayer" parent="."]
layer = -1
follow_viewport_enable = true

[node name="ColorRect" type="ColorRect" parent="Back_ground"]
margin_left = -512.0
margin_top = -352.0
margin_right = 504.0
margin_bottom = 336.0
color = Color( 0.188235, 0.172549, 0.180392, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="Sprite" parent="."]
rotation = 3.14159
scale = Vector2( 1e-05, 1e-05 )
texture = ExtResource( 3 )

[node name="Title" type="Sprite" parent="."]
position = Vector2( 0, 57 )
scale = Vector2( 1e-05, 1e-05 )
texture = ExtResource( 4 )

[node name="Tween" type="Tween" parent="."]

[node name="Tween2" type="Tween" parent="."]

[node name="Camera2D" parent="." instance=ExtResource( 1 )]

[node name="RandomAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
volume_db = 10.0
bus = "SFX-UI"
script = ExtResource( 5 )
samples = [ ExtResource( 6 ) ]
random_strategy = 1
random_pitch_range = 0.4

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="tween_all_completed" from="Tween2" to="." method="_on_Tween2_tween_all_completed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
